Player Vision and doors
* Player Vision
-- Players can see their sight radius in corridors
-- Players can see through open doors into lit rooms
-- Note: lit rooms are not implemented yet, all rooms are lit currently

*Doors
-- Player can open and close doors
-- Sounds added for opening and closing
-- This is made possible by adding a nextAction property to the player
object
-- The nextAction will be used heavily moving forward

* Turns
-- Turns are tracked on the player object
-- Moving, opening doors, closing doors, bumping into things all take a
turn

--- a/index.html
+++ b/index.html
@@ -20,6 +20,45 @@
 		<div id="StatsContainer">
 			<canvas id="StatsCanvas" width="96" height="256"></canvas>
 		</div>
+		<div>
+			<fieldset class="inlineBlock" id="GameInstructionsFieldset">
+				<legend>Keys</legend>
+				<table>
+					<thead>
+						<tr>
+							<th>Key</th>
+							<th>Action</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>W</td>
+							<td>Move Up</td>
+						<tr>
+						<tr>
+							<td>A</td>
+							<td>Move Left</td>
+						<tr>
+						<tr>
+							<td>S</td>
+							<td>Move Down</td>
+						<tr>
+						<tr>
+							<td>D</td>
+							<td>Move Right</td>
+						<tr>
+						<tr>
+							<td>O</td>
+							<td>Open Door</td>
+						<tr>
+						<tr>
+							<td>C</td>
+							<td>Close Door</td>
+						<tr>
+					</tbody>
+				</table>	
+			</fieldset>
+		</div>
 		<div id="GameMessagesContainer">
 			<fieldset class="inlineBlock" id="GameMessagesFieldset">
 				<legend>Game Messages</legend>
