--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
 							<td>Close door</td>
 						<tr>
 						<tr>
+							<td>k</td>
+							<td>Kick door</td>
+						<tr>
+						<tr>
 							<td>></td>
 							<td>Go down stairs</td>
 						<tr>
