--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<canvas id="MainCanvas" width="1024" height="576"></canvas>
 		</div>
 		<div id="LogContainer">
-			<canvas id="LogCanvas" width="256" height="100"></canvas>
+			<canvas id="LogCanvas" width="256" height="580"></canvas>
 		</div>
 		<div id="StatsContainer">
 			<canvas id="StatsCanvas" width="96" height="256"></canvas>
@@ -68,6 +68,14 @@
 						<tr>
 							<td>></td>
 							<td>Go down stairs</td>
+						<tr>
+						<tr>
+							<td>p</td>
+							<td>Put on (armor)</td>
+						<tr>
+						<tr>
+							<td>t</td>
+							<td>Take off (armor)</td>
 						<tr>
 					</tbody>
 				</table>	
