--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<script src="includes/jquery/js/jquery-ui-1.10.4.custom.js"></script>
 		<link rel="stylesheet" type="text/css" href="includes/main.css">
 		<script type="text/javascript" src="includes/seedrandom.js"></script>
+		<script type="text/javascript" src="includes/roll.js"></script>
 		<script type="text/javascript" src="includes/items.js"></script>
 		<script type="text/javascript" src="includes/effects.js"></script>
 		<script type="text/javascript" src="includes/log.js"></script>
