--- a/index.html
+++ b/index.html
@@ -78,6 +78,10 @@
 							<td>t</td>
 							<td>Take off (armor)</td>
 						<tr>
+						<tr>
+							<td>e</td>
+							<td>Eat</td>
+						<tr>
 					</tbody>
 				</table>	
 			</fieldset>
